actualizacion de proyectos y estilos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" class="rounded-full" href="./././public/foto.png" />
+    <link rel="icon" type="image/svg+xml" class="rounded-full" href="https://res.cloudinary.com/dfuwdpual/image/upload/v1752678477/foto_objuub.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio de Bisello - Desarrollador y Programador web</title>
   </head>
